third_party/move/move-compiler-v2/tests/more-v1/expansion/friend_decl_imported_duplicates.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/more-v1/expansion/friend_decl_imported_duplicates.move:7:5
  │
6 │     friend 0x42::A;
  │     --------------- Friend previously declared here
7 │     friend A;
  │     ^^^^^^^^^ Duplicate friend declaration '0x42::A'. Friend declarations in a module must be unique
